Fix text truncation on Ionic

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -17,12 +17,12 @@
 
 text {
   fill: white;
-  text-length: 20;
+  text-length: 50;
 }
 
 textarea {
   fill: white;
-  text-length: 20;
+  text-length: 50;
 }
 
 .aux-data {
