--- a/resources/styles~348x250.css
+++ b/resources/styles~348x250.css
@@ -17,12 +17,12 @@
 
 text {
   fill: white;
-  text-length: 10;
+  text-length: 50;
 }
 
 textarea {
   fill: white;
-  text-length: 10;
+  text-length: 50;
 }
 
 .aux-data {
